# dev_skel

./: .editorconfig  .gitignore  .output.txt  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  ROADMAP.md  TODO.md  install.sh  maintenance  skel-deps  test  test-workflow  update.sh
.claude/: settings.local.json
_bin/: _devcontainer_lib.py  _frontend_backend_lib.py  _k8s_lib.py  _react_backend_lib.py  common.sh  dev_skel_backport.py  dev_skel_lib.py  dev_skel_refactor_runtime.py  install-dev-skel  rsync-common-excludes.txt  skel-add  skel-ai  skel-backport  skel-contracts  skel-deploy  skel-gen  skel-gen-ai  skel-gen-static  skel-install  skel-install-arch  skel-install-fedora  skel-install-macos  skel-install-rag  skel-install-ubuntu  skel-k8s-deploy  skel-k8s-push  skel-list  skel-rag  skel-rag-compile  skel-sync  skel-test-ai-fanout  skel-test-ai-generators  skel-test-ai-memory  skel-test-ai-script  (+80 more)
_skels/python-django-skel/: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  JUNIE-RULES.md  Makefile  build  build-dev  conftest.py  deps  gen  install-deps  merge  merge.sh  pyproject.toml  run  run-dev  stop  stop-dev  test  test_skel
_skels/python-django-skel/.devcontainer/: Dockerfile  devcontainer.json
_skels/python-django-skel/app/: admin.py  apps.py  models.py  seed.py  serializers.py  urls.py  views.py
_skels/python-django-skel/app/migrations/: 0001_initial.py
_skels/python-django-skel/myproject/: asgi.py  settings.py  urls.py  wsgi.py
_skels/python-django-skel/tests/: test_views.py
_skels/python-fastapi-skel/: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  JUNIE-RULES.md  Makefile  build  build-dev  config.py  create_superuser.py  deps  docker-compose.yml  gen  gen-requirements  install-deps  merge  merge.sh  pyproject.toml  run  run-dev  stop  stop-dev  test  test_skel
_skels/python-fastapi-skel/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.devcontainer.yml
_skels/python-fastapi-skel/app/: __init__.py  config.py  database.py  depts.py  health.py  main.py  models.py  routes.py  schemas.py
_skels/python-fastapi-skel/app/example_items/: depts.py  routes.py
_skels/python-fastapi-skel/app/example_items/adapters/: sql.py
_skels/python-fastapi-skel/app/example_items/tests/e2e/: test_example_item.py
_skels/python-fastapi-skel/app/example_items/tests/integration/: test_example_item.py
_skels/python-fastapi-skel/app/example_items/tests/unit/: test_example_item.py
_skels/python-fastapi-skel/app/wrapper_api/: __init__.py  auth.py  db.py  deps.py  order_models.py  orders.py  router.py  security.py  seed.py  state.py
_skels/python-fastapi-skel/app/wrapper_api/tests/: test_seed_and_login.py
_skels/python-fastapi-skel/core/: __init__.py  app.py  config.py  deps.py  events.py  messagebus.py  security.py
_skels/python-fastapi-skel/core/adapters/: dict.py  sql.py
_skels/python-fastapi-skel/core/tests/: test_event.py  test_repository.py  utils.py
_skels/python-fastapi-skel/core/users/models/: events.py
_skels/python-fastapi-skel/core/users/routes/: login.py  users.py
_skels/python-fastapi-skel/core/users/tests/e2e/: test_login.py  test_user.py
_skels/python-fastapi-skel/core/users/tests/unit/: test_user.py
_skels/python-fastapi-skel/docs/: DATABASE.md  KUBERNETES.md
_skels/python-fastapi-skel/helm/: Chart.yaml
_skels/python-fastapi-skel/helm/templates/: deployment.yml  ingress.yml  redoc-ingress.yml
_skels/python-fastapi-skel/k8s/: ingress.yaml  kustomization.yaml  postgres.yaml
_skels/python-fastapi-skel/tests/: conftest.py  test_main.py
_skels/python-flask-skel/: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  JUNIE-RULES.md  Makefile  build  build-dev  deps  gen  install-deps  merge  merge.sh  pyproject.toml  run  run-dev  run.py  stop  stop-dev  test  test_skel
_skels/python-flask-skel/.devcontainer/: devcontainer.json  docker-compose.devcontainer.yml
_skels/python-flask-skel/app/: __init__.py  auth.py  config.py  models.py  routes.py  seed.py
_skels/python-flask-skel/tests/: test_routes.py
_skels/rust-actix-ddd-skel/: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  JUNIE-RULES.md  build-dev  run  run-dev  stop-dev  test_skel
_skels/rust-actix-ddd-skel/src/: config.rs  main.rs  seed.rs
_skels/rust-actix-ddd-skel/src/auth/: depts.rs  jwt.rs  mod.rs  routes.rs  service.rs
_skels/rust-actix-ddd-skel/src/catalog/: depts.rs  mod.rs  repository.rs  routes.rs  service.rs
_skels/rust-actix-ddd-skel/src/categories/: depts.rs  mod.rs  repository.rs  routes.rs  service.rs
_skels/rust-actix-ddd-skel/src/entities/: item.rs  order.rs
_skels/rust-actix-ddd-skel/src/items/: depts.rs  mod.rs  repository.rs  routes.rs  service.rs
_skels/rust-actix-ddd-skel/src/orders/: depts.rs  mod.rs  routes.rs  service.rs
_skels/rust-actix-ddd-skel/src/shared/: errors.rs  httpx.rs  mod.rs  repository.rs
_skels/rust-actix-ddd-skel/src/state/: depts.rs  mod.rs  routes.rs  service.rs
_skels/rust-actix-ddd-skel/src/state/adapters/: sql.rs
_skels/rust-actix-ddd-skel/src/users/: mod.rs
_skels/rust-actix-ddd-skel/src/users/adapters/: mod.rs  sql.rs
_skels/rust-actix-skel/: .env.example  AGENTS.md  CLAUDE.md  Cargo.toml  JUNIE-RULES.md  Makefile  build  deps  gen  install-deps  merge  merge.sh  run  stop  test  test_skel
_skels/rust-actix-skel/.devcontainer/: devcontainer.json
_skels/rust-actix-skel/src/: auth.rs  config.rs  db.rs  error.rs  main.rs  seed.rs
_skels/rust-actix-skel/src/handlers/: auth.rs  categories.rs  items.rs  mod.rs  orders.rs  state.rs
_skels/rust-axum-skel/: .env.example  AGENTS.md  CLAUDE.md  Cargo.toml  JUNIE-RULES.md  Makefile  build  gen  merge  merge.sh  run  run-dev  test  test_skel
_skels/rust-axum-skel/.devcontainer/: Dockerfile  devcontainer.json
_skels/rust-axum-skel/src/: auth.rs  config.rs  db.rs  error.rs  main.rs  seed.rs
_skels/rust-axum-skel/src/entities/: category.rs  order_address.rs  order_line.rs
_skels/rust-axum-skel/src/handlers/: auth.rs  categories.rs  items.rs  mod.rs  orders.rs  state.rs
(+795 files in other folders)
