[tool.poetry]
name = "fastapi-ddd-project"
version = "0.1.0"
description = "FastAPI DDD project skeleton"
authors = ["Your Name <your@email.com>"]
packages = [{include = "core", from = "."}, {include = "app", from = "."}]
readme = "README.md"

[tool.poetry.dependencies]
# Supports Python 3.11+, recommended: 3.14
python = ">=3.11,<4.0"

# FastAPI and web
fastapi = {extras = ["all"], version = ">=0.115"}
uvicorn = "*"
httpx = "*"
httpx-ws = "*"
asgi-lifespan = "*"
requests = "*"

# Pydantic
pydantic = {extras = ["email"], version = ">=2.10"}
pydantic-settings = "*"

# Security
python-jose = {extras = ["cryptography"], version = "*"}
passlib = {extras = ["bcrypt"], version = "*"}
bcrypt = "==4.0.1"  # Pin exactly for passlib compatibility

# Telemetry
fastapi-healthchecks = "*"
fastapi-events = {extras = ["otel"], version = "*"}
opentelemetry-api = "*"
opentelemetry-sdk = "*"
opentelemetry-instrumentation-fastapi = "*"
loguru = "*"

# Database
sqlmodel = "*"
sqlalchemy = {extras = ["asyncio"], version = ">=2.0"}
sqlalchemy-utils = "*"
aiosqlite = "*"
asyncpg = "*"
alembic = "*"

# Redis
redis = "*"
hiredis = "*"

# Geolocation
geoalchemy2 = "*"
geopy = "*"
haversine = "*"

# AI
openai = "*"

# Email
emails = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
pytest-asyncio = "*"
ruff = "*"
ipdb = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "app", "core"]
python_files = "test_*.py"
python_functions = "test_*"
