[package]
name = "rust-actix-ddd-skel"
version = "1.0.0"
edition = "2021"
description = "Rust/Actix-web skeleton project"
license = "MIT"

# Pin the binary name so the compiled artifact is always
# `target/release/app`, regardless of the package name. The run/build
# scripts and the generated Dockerfile all assume this name.
[[bin]]
name = "app"
path = "src/main.rs"

[dependencies]
actix-web = "4"
actix-rt = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"
dotenvy = "0.15"

# Wrapper-shared backend stack so the React frontend's `/api/auth/*`,
# `/api/categories`, `/api/items`, and `/api/state` calls Just Work
# against this service out of the box. SQLite is the default backing
# store (matches the wrapper-shared `_shared/db.sqlite3`); switch to
# Postgres by changing DATABASE_URL — SeaORM auto-detects the driver.
sea-orm = { version = "1", default-features = false, features = [
    "runtime-tokio-rustls",
    "sqlx-sqlite",
    "sqlx-postgres",
    "macros",
    "with-chrono",
] }
sea-orm-migration = { version = "1", default-features = false, features = [
    "runtime-tokio-rustls",
    "sqlx-sqlite",
    "sqlx-postgres",
] }
jsonwebtoken = "9"
argon2 = "0.5"
password-hash = { version = "0.5", features = ["std"] }
rand = "0.8"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
thiserror = "1"
futures-util = "0.3"
# Required to declare async methods on the per-resource Repository
# traits (light-DDD layered services). SeaORM already pulls this
# transitively, so adding it as a direct dep does not change
# resolution.
async-trait = "0.1"

[dev-dependencies]
actix-rt = "2"

[profile.release]
lto = true
codegen-units = 1
strip = true
