[package]
name = "rust-actix-skel"
version = "1.0.0"
edition = "2021"
description = "Rust/Actix-web skeleton project"
license = "MIT"

# Pin the binary name so the compiled artifact is always
# `target/release/app`, regardless of the package name. The run/build
# scripts and the generated Dockerfile all assume this name.
[[bin]]
name = "app"
path = "src/main.rs"

[dependencies]
actix-web = "4"
actix-rt = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"
dotenvy = "0.15"

[dev-dependencies]
actix-rt = "2"

[profile.release]
lto = true
codegen-units = 1
strip = true
