[package]
name = "rust-axum-skel"
version = "1.0.0"
edition = "2021"
description = "Rust/Axum skeleton project"
license = "MIT"

# Pin the binary name so the compiled artifact is always
# `target/release/app`, regardless of the package name. The run/build
# scripts and the generated Dockerfile all assume this name.
[[bin]]
name = "app"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"

[dev-dependencies]
axum-test = "14"
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
